avformat/Makefile: Add missing rawdec dependency for IPU demuxer
Needed for ff_raw_read_partial_packet and ff_raw_options.

Signed-off-by: Andreas Rheinhardt <andreas.rheinhardt@outlook.com>

--- a/libavformat/Makefile
+++ b/libavformat/Makefile
@@ -284,7 +284,7 @@ OBJS-$(CONFIG_IMAGE_XPM_PIPE_DEMUXER)     += img2dec.o img2.o
 OBJS-$(CONFIG_IMAGE_XWD_PIPE_DEMUXER)     += img2dec.o img2.o
 OBJS-$(CONFIG_INGENIENT_DEMUXER)         += ingenientdec.o rawdec.o
 OBJS-$(CONFIG_IPMOVIE_DEMUXER)           += ipmovie.o
-OBJS-$(CONFIG_IPU_DEMUXER)               += ipudec.o
+OBJS-$(CONFIG_IPU_DEMUXER)               += ipudec.o rawdec.o
 OBJS-$(CONFIG_IRCAM_DEMUXER)             += ircamdec.o ircam.o pcm.o
 OBJS-$(CONFIG_IRCAM_MUXER)               += ircamenc.o ircam.o rawenc.o
 OBJS-$(CONFIG_ISS_DEMUXER)               += iss.o
